cmake_minimum_required(VERSION 3.20)
project(Hw4)

set(CMAKE_CXX_STANDARD 98)

add_executable(Hw4 main.cpp Car.h Car.cpp FamilyCar.h FamilyCar.cpp Helper.h Helper.cpp Junction.h Junction.cpp LuxuryCar.h LuxuryCar.cpp Map.h Map.cpp Maserati.h Maserati.cpp Metro.h Metro.cpp ReadingFiles.h ReadingFiles.cpp Road.h Road.cpp SportCar.h SportCar.cpp)
